--- a/UpMap/app/src/main/res/layout-v21/item_vp1.xml
+++ b/UpMap/app/src/main/res/layout-v21/item_vp1.xml
@@ -2,7 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="vertical">
+    <RelativeLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/border"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout_find">
+        <!--<EditText-->
+        <!--android:background="@null"-->
+        <!--android:paddingLeft="20dp"-->
+        <!--android:textSize="13dp"-->
+        <!--android:textColorHint="#b7b7b7"-->
+        <!--android:hint="Tìm kiếm"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:id="@+id/search" />-->
 
+        <ImageButton
+            android:background="@drawable/voice"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/imageButton"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp" />
+
+        <EditText
+            android:background="@null"
+            android:paddingLeft="20dp"
+            android:textSize="13dp"
+            android:textColorHint="#b7b7b7"
+            android:textStyle="italic"
+            android:id="@+id/sort_search"
+            android:inputType="textPhonetic"
+            android:hint="Tìm kiếm"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignTop="@+id/imageButton"
+            android:layout_alignParentStart="true"></EditText>
+    </RelativeLayout>
+    <ListView
+        android:id="@+id/listview_sort"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
 
 
 </LinearLayout>
