--- a/UpMap/app/src/main/res/layout/item_sot.xml
+++ b/UpMap/app/src/main/res/layout/item_sot.xml
@@ -17,18 +17,21 @@
         android:layout_toEndOf="@+id/iv_sortlocation"
         >
         <TextView
-            android:textSize="30dp"
+            android:textColor="#9f9f9f"
+            android:textSize="20dp"
             android:id="@+id/name_sort"
             android:hint="Lotte mark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:textColor="#9f9f9f"
             android:textSize="13dp"
             android:id="@+id/add_sort"
             android:hint="33 thanh thi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:textColor="@color/blue_grey"
             android:textSize="13dp"
             android:id="@+id/ser_sort"
             android:hint="33 thanh thi"
